--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <!-- Tarjeta 1 -->
-        <a href="./documents/Topología_I/main.pdf" class="card">
+        <a href="./documents/Topología_I/main.pdf" class="card" target="_blank">
             <img src="./miniaturas/topo.png" alt="Imagen 1">
             <div class="card-text">
                 <p>Topología I</p>
@@ -19,7 +19,7 @@
         </a>
         
         <!-- Tarjeta 2 -->
-        <a href="./documents/Ecuaciones_Diferenciales_I/main.pdf" class="card">
+        <a href="./documents/Ecuaciones_Diferenciales_I/main.pdf" class="card" target="blank">
             <img src="./miniaturas/ec_dif.png" alt="Imagen 2">
             <div class="card-text">
                 <p>Ecuaciones_Diferenciales_I</p>
