--- a/otros/buscador2.html
+++ b/otros/buscador2.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style_2.css">
 		<link rel="shortcut icon" type="image/png" href="favicon.ico"/>
 		<title>Nueva pestaña</title>
 		<link rel="icon" href="icons/chrome_icon.svg">
@@ -35,36 +35,38 @@
 						Revisión Cantoral	
 					</div>
 				</a>
-				<ul class="icon" href="">
+				<div class="icon" href="">
 					<div class="img_frame">
 						<img src="icons/folder_icon.svg" alt="folder">
 					</div>
 					<div class="icon_text">
-						Cursos	
+						Cursos
 					</div>
-					<li><a href="">Primero</a>
-						<ul>
-							<li><a href="#">Opción 1</a></li>
-						</ul>
-					<li><a href="">Segundo</a></li>
-					<li><a href="">Tercero</a>
-						<ul>
-							<li><a href="">Primer Cuatrimestre</a>
-								<ul>
-									<li><a href="https://google.com/search?q=Probabilidad">Probabilidad</a></li>
-									<li><a href="https://www.google.com/search?q=Ecuaciones+Diferenciales+I">Ecuaciones Diferenciales I</a></li>
-									<li><a href="https://google.com/search?q=Topología+I">Topología I</a></li>
-									<li><a href="https://google.com/search?q=SCD">SCD</a></li>
-									<li><a href="https://google.com/search?q=MC">MC</a></li>
-									<li><a href="https://google.com/search?q=FR">FR</a></li>
-									<li><a href="https://google.com/search?q=FBD">FBD</a></li>
-								</ul>
-							</li>
-							<li><a href="">Segundo Cuatrimestre</a></li>
-						</ul>
-					</li>
-					<li><a href="">Submenu4</a></li>
-				</ul>
+					<ul id="carpetas">
+						<li><a href="">Primero</a>
+							<ul>
+								<li><a href="#">Opción 1</a></li>
+							</ul>
+						<li><a href="">Segundo</a></li>
+						<li><a href="">Tercero</a>
+							<ul>
+								<li><a href="">Primer Cuatrimestre</a>
+									<ul>
+										<li><a href="https://google.com/search?q=Probabilidad">Probabilidad</a></li>
+										<li><a href="https://www.google.com/search?q=Ecuaciones+Diferenciales+I">Ecuaciones Diferenciales I</a></li>
+										<li><a href="https://google.com/search?q=Topología+I">Topología I</a></li>
+										<li><a href="https://google.com/search?q=SCD">SCD</a></li>
+										<li><a href="https://google.com/search?q=MC">MC</a></li>
+										<li><a href="https://google.com/search?q=FR">FR</a></li>
+										<li><a href="https://google.com/search?q=FBD">FBD</a></li>
+									</ul>
+								</li>
+								<li><a href="">Segundo Cuatrimestre</a></li>
+							</ul>
+						</li>
+						<li><a href="">Submenu4</a></li>
+					</ul>
+				</div>
 			</div>
 			<div class="derecha">
 				<a class="icon" href="https://classroom.google.com">
