--- a/otros/buscador_UGR.html
+++ b/otros/buscador_UGR.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style_UGR.css">
 		<link rel="shortcut icon" type="image/png" href="favicon.ico"/>
 		<title>Nueva pestaña</title>
 		<link rel="icon" href="icons/chrome_icon.svg">
