--- a/otros/bocetos/buscador_UGR.html
+++ b/otros/bocetos/buscador_UGR.html
@@ -19,7 +19,7 @@
 	<body>
 		<div class="escritorio">
 			<div class="izquierda">
-				<ul class="icon" href="">
+				<ul class="icon">
 					<div class="img_frame">
 						<img src="icons/folder_icon.svg" alt="folder">
 					</div>
@@ -90,86 +90,94 @@
 					</li>
 				</ul>
 
-				<ul class="icon" href="https://www.ejemplo.com">
-					<div class="img_frame">
-						<img src="icons/github-icon.svg" alt="folder">
-					</div>
-					<div class="icon_text">
-						Github
-					</div>
-					
-					<li><a href="https://github.com/arturo-olvrs/arturo-olvrs">Arturo Olivares</a></li>
-					<li><a href="https://github.com/Joshoccas/DGIIM">Joshoccas</a></li>
-					<li><a href="https://github.com/LosDelDGIIM/LosDelDGIIM.github.io">LosDelDGIIM</a></li>
-					<li><a href="https://github.com/jesusmuve18">jesusmuve18</a></li>					
-				</ul>
-
-				<ul class="icon" href="">
+				<ul class="icon">
 					<div class="img_frame">
 						<img src="icons/folder_icon.svg" alt="folder">
 					</div>
 					<div class="icon_text">
-						Latex
+						Cursos	
 					</div>
-					<li><a href="Overleaf" image="icons/overleaf_icon.svg">Overleaf</a></li>
-					<li><a href="https://manualdelatex.com/simbolos#chapter2">Símbolos</a></li>
-					<li><a href="https://manualdelatex.com/caracteres/letras-griegas">Letras</a></li>
-					<li><a href="https://detexify.kirelabs.org/classify.html">Handwriten recognition</a></li>
+					<li><a href="">Primero</a>
+						<ul>
+							<li><a href="">Primer Cuatrimestre</a>
+                                <ul>
+                                    <li><a href="https://pradogrado2223.ugr.es/course/view.php?id=5109">Geometría I</a></li>
+                                    <li><a href="https://pradogrado2223.ugr.es/course/view.php?id=2230">Cálculo I</a></li>
+                                    <li><a href="https://pradogrado2223.ugr.es/course/view.php?id=1512">Álgebra I</a></li>
+                                    <li><a href="https://pradogrado2223.ugr.es/course/view.php?id=4987">FFT</a></li>
+                                    <li><a href="https://pradogrado2223.ugr.es/course/view.php?id=2863">FP</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="">Segundo Cuatrimestre</a>
+                                <ul>
+                                    <li><a href="https://pradogrado2223.ugr.es/course/view.php?id=3886">MP</a></li>
+                                    <li><a href="https://pradogrado2223.ugr.es/course/view.php?id=532">FS</a></li>
+                                    <li><a href="https://pradogrado2223.ugr.es/course/view.php?id=1065">EDIP</a></li>
+                                    <li><a href="https://pradogrado2223.ugr.es/course/view.php?id=2901">Geometría II</a></li>
+                                    <li><a href="https://classroom.google.com/c/NTk0Nzg1MTM2OTg2">Cálculo II</a></li>
+                                    <li><a href="https://pradogrado2223.ugr.es/course/view.php?id=2824">Métodos Numéricos I</a></li>
+                                </ul>
+                            </li>
+						</ul>
+					<li><a href="">Segundo</a>
+                        <ul>
+							<li><a href="">Primer Cuatrimestre</a>
+                                <ul>
+                                    <li><a href="https://swad.ugr.es/es">EC</a></li>
+                                    <li><a href="https://pradogrado2324.ugr.es/course/view.php?id=11826">SO</a></li>
+                                    <li><a href="https://pradogrado2324.ugr.es/course/view.php?id=12750">ED</a></li>
+                                    <li><a href="https://classroom.google.com/c/NjIyNTM1NTE1OTU5">Análisis Matemático I</a></li>
+                                    <li><a href="https://pradogrado2324.ugr.es/course/view.php?id=8955">Geometría III</a></li>
+                                    <li><a href="https://pradogrado2324.ugr.es/course/view.php?id=8102">Topología I</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="">Segundo Cuatrimestre</a>
+                                <ul>
+                                    <li><a href="https://pradogrado2324.ugr.es/course/view.php?id=5030">Modelos Matemáticos I</a></li>
+                                    <li><a href="https://classroom.google.com/c/NjYyOTQzODE0NDMw">Análisis Matemático II</a></li>
+                                    <li><a href="https://swad.ugr.es/es">AC</a></li>
+                                    <li><a href="https://pradogrado2324.ugr.es/course/view.php?id=6692">Algorítmica</a></li>
+                                    <li><a href="https://pradogrado2324.ugr.es/course/view.php?id=8482">LMD</a></li>
+                                    <li><a href="https://pradogrado2324.ugr.es/course/view.php?id=4939">PDOO</a></li>
+                                </ul>
+                            </li>
+						</ul>
+                    </li>
+					<li><a href="">Tercero</a>
+						<ul>
+							<li><a href="">Primer Cuatrimestre</a>
+								<ul>
+									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=3260">Probabilidad</a></li>
+									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=2023">Ecuaciones Diferenciales I</a></li>
+									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=14940">Topología I</a></li>
+									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=1497">SCD</a></li>
+									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=2696">MC</a></li>
+									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=4467">FR</a></li>
+									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=13651">FBD</a></li>
+								</ul>
+							</li>
+							<li><a href="">Segundo Cuatrimestre</a></li>
+						</ul>
+					</li>
 				</ul>
-
-				<div class="icon" href="https://classroom.google.com">
-					<div class="img_frame">
-						<img src="icons/classroom_icon.svg" alt="google classroom">
-					</div>
-					<div class="icon_text">
-						Enlace 1
-					</div>
-				</div>
-
-				<div class="icon" href="https://classroom.google.com">
-					<div class="img_frame">
-						<img src="icons/classroom_icon.svg" alt="google classroom">
-					</div>
-					<div class="icon_text">
-						Enlace 1
-					</div>
-				</div>
-
-				<div class="icon" href="https://classroom.google.com">
-					<div class="img_frame">
-						<img src="icons/classroom_icon.svg" alt="google classroom">
-					</div>
-					<div class="icon_text">
-						Enlace 1
-					</div>
-				</div>
-
-				<div class="icon" href="https://classroom.google.com">
-					<div class="img_frame">
-						<img src="icons/classroom_icon.svg" alt="google classroom">
-					</div>
-					<div class="icon_text">
-						Enlace 1
-					</div>
-				</div>
 			</div>
 			<div class="derecha">
-				<a class="icon" href="https://losdeldgiim.github.io/">
+				<a class="icon" href="https://classroom.google.com">
 					<div class="img_frame">
-						<img src="icons/dgiim_icon.png" alt="google classroom">
+						<img src="icons/classroom_icon.svg" alt="google classroom">
 					</div>
 					<div class="icon_text">
-						LosDelDGIIM
+						Enlace 1
 					</div>
 				</a>
-				<div class="icon" href="https://classroom.google.com">
+				<a class="icon" href="https://classroom.google.com">
 					<div class="img_frame">
 						<img src="icons/classroom_icon.svg" alt="google classroom">
 					</div>
 					<div class="icon_text">
 						Enlace 2
 					</div>
-				</div>
+				</a>
 			</div>
 		</div>
 
@@ -201,6 +209,15 @@
 					</div>
 					<div class="icon_text">
 						Google Classroom
+					</div>
+				</a>
+
+				<a class="icon" href="https://pradogrado2425.ugr.es">
+					<div class="img_frame">
+						<img src="icons/prado_icon.png" alt="google classroom">
+					</div>
+					<div class="icon_text">
+						Prado
 					</div>
 				</a>
 			</div>
