--- a/buscador/buscador_UGR.html
+++ b/buscador/buscador_UGR.html
@@ -203,6 +203,15 @@
 						Google Classroom
 					</div>
 				</a>
+
+				<a class="icon" href="https://oficinavirtual.ugr.es/ai/index.jsp">
+					<div class="img_frame">
+						<img src="icons/ugr2_icon.svg" alt="oficinavirtual">
+					</div>
+					<div class="icon_text">
+						Oficina Virtual
+					</div>
+				</a>
 			</div>
 		</div>
 	</body>
