--- a/buscador/buscador_UGR.html
+++ b/buscador/buscador_UGR.html
@@ -90,7 +90,7 @@
 					</li>
 				</ul>
 
-				<ul class="icon" href="https://www.ejemplo.com">
+				<ul class="icon" href="https://www.github.com">
 					<div class="img_frame">
 						<img src="icons/github-icon.svg" alt="folder">
 					</div>
