--- a/buscador/buscador_UGR.html
+++ b/buscador/buscador_UGR.html
@@ -111,7 +111,7 @@
 					<div class="icon_text">
 						Latex
 					</div>
-					<li><a href="Overleaf" image="icons/overleaf_icon.svg">Overleaf</a></li>
+					<li><a href="https://www.overleaf.com/project" image="icons/overleaf_icon.svg">Overleaf</a></li>
 					<li><a href="https://manualdelatex.com/simbolos#chapter2">Símbolos</a></li>
 					<li><a href="https://manualdelatex.com/caracteres/letras-griegas">Letras</a></li>
 					<li><a href="https://detexify.kirelabs.org/classify.html">Handwriten recognition</a></li>
