--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </a>
         
         <!-- Tarjeta 2 -->
-        <a href="./documents/Ecuaciones_Diferenciales_I/main.pdf" class="card" target="blank">
+        <!--a href="./documents/Ecuaciones_Diferenciales_I/main.pdf" class="card" target="blank">
             <img src="./miniaturas/ec_dif.png" alt="Imagen 2">
             <div class="card-text">
                 <p>Ecuaciones_Diferenciales_I</p>
             </div>
-        </a>
+        </a-->
 
     </div>
 </body>
