--- a/code/MC/Practica_Lex/fichero.html
+++ b/code/MC/Practica_Lex/fichero.html
@@ -14,13 +14,16 @@
 </head>
 <body>
 
-
+<h1>Esto es un título</h1>
+<h2>Esto es un subtítulo</h2>
+<h3>Esto es un subsubtítulo</h3>
 
 Aquí comienza un texto que puede contener palabras en <strong>negrita</strong>, en <em>cursiva</em> y <u>subrayadas</u>. 
 Puede contener también <a href="https://ejemplo.com">enlaces</a>.
-Además se pueden empezar párrafos como el siguiente:
+Además, se pueden empezar párrafos como el siguiente:
 
 <p>Esto es un párrafo de un documento HTML que termina con un salto de línea.</p><br>
+Se pueden ver también imágenes como la siguiente:<br>
 
 <img src="image.png" width="300" height="200"><br>
 
