--- a/buscador/buscador_UGR.html
+++ b/buscador/buscador_UGR.html
@@ -212,6 +212,15 @@
 						Oficina Virtual
 					</div>
 				</a>
+
+				<a class="icon" href="https://webmailest.ugr.es/?_task=mail&_mbox=INBOX">
+					<div class="img_frame">
+						<img src="icons/webmail.ico" alt="oficinavirtual">
+					</div>
+					<div class="icon_text">
+						Webmail
+					</div>
+				</a>
 			</div>
 		</div>
 	</body>
