--- a/buscador/buscador_UGR.html
+++ b/buscador/buscador_UGR.html
@@ -85,7 +85,16 @@
 									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=13651">FBD</a></li>
 								</ul>
 							</li>
-							<li><a href="">Segundo Cuatrimestre</a></li>
+							<li><a href="">Segundo Cuatrimestre</a>
+								<ul>
+									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=1123">Métodos Numéricos II</a></li>
+									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=">Variable Compleja I</a></li>
+									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=">Álgebra II</a></li>
+									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=">FIS</a></li>
+									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=">IA</a></li>
+									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=3580">ISE</a></li>
+								</ul>
+							</li>
 						</ul>
 					</li>
 				</ul>
