--- a/buscador/buscador_UGR.html
+++ b/buscador/buscador_UGR.html
@@ -101,7 +101,7 @@
 
 				<ul class="icon" href="https://www.github.com">
 					<div class="img_frame">
-						<img src="icons/github-icon.svg" alt="folder">
+						<img src="icons/github_icon.svg" alt="folder">
 					</div>
 					<div class="icon_text">
 						Github
@@ -171,14 +171,30 @@
 						LosDelDGIIM
 					</div>
 				</a>
-				<div class="icon" href="https://classroom.google.com">
+				<a class="icon" href="https://docs.google.com/spreadsheets/d/1eOhnSMfKHdAzlzxaywsdX-ebu_PB8TLO_rpgW3Ty8ao/edit?gid=0#gid=0">
 					<div class="img_frame">
-						<img src="icons/classroom_icon.svg" alt="google classroom">
+						<img src="icons/google_sheets_icon.svg" alt="google classroom">
 					</div>
 					<div class="icon_text">
-						Enlace 2
+						Horario
 					</div>
-				</div>
+				</a>
+				<a class="icon" href="https://docs.google.com/spreadsheets/d/1qq-tZfSWD_kFkSmVfnmU9ztnh2Fg9N2dLrE-TCbxOs8/edit?gid=1581459916#gid=1581459916">
+					<div class="img_frame">
+						<img src="icons/google_sheets_icon.svg" alt="google classroom">
+					</div>
+					<div class="icon_text">
+						Notas
+					</div>
+				</a>
+				<a class="icon" href="https://calendar.notion.so/">
+					<div class="img_frame">
+						<img src="icons/notion_icon.svg" alt="google classroom">
+					</div>
+					<div class="icon_text">
+						Calendario
+					</div>
+				</a>
 			</div>
 		</div>
 
@@ -228,6 +244,15 @@
 					</div>
 					<div class="icon_text">
 						Webmail
+					</div>
+				</a>
+
+				<a class="icon" href="https://webmailest.ugr.es/?_task=mail&_mbox=INBOX">
+					<div class="img_frame">
+						<img src="icons/gmail_icon.svg" alt="oficinavirtual">
+					</div>
+					<div class="icon_text">
+						Gmail
 					</div>
 				</a>
 			</div>
