--- a/index.html
+++ b/index.html
@@ -9,22 +9,69 @@
 <body>
     <h1>Archivos</h1>
 
+    <h2>Segundo</h2>
+
     <div class="container">
-        <!-- Tarjeta 1 -->
-        <a href="./documents/Topología_I/main.pdf" class="card" target="_blank">
+        <a href="./documents/Tercero/Primer Cuatrimestre/Topología_I/main.pdf" class="card" target="_blank">
             <img src="./miniaturas/topo.png" alt="Imagen 1">
             <div class="card-text">
                 <p>Topología I</p>
             </div>
         </a>
+    </div>
+
+    <h2>Tercero</h2>
+
+    <div class="container">      
         
-        <!-- Tarjeta 2 -->
         <!--a href="./documents/Ecuaciones_Diferenciales_I/main.pdf" class="card" target="blank">
             <img src="./miniaturas/ec_dif.png" alt="Imagen 2">
             <div class="card-text">
                 <p>Ecuaciones_Diferenciales_I</p>
             </div>
         </a-->
+
+        <a href="./documents/Tercero/Segundo Cuatrimestre/Álgebra_II/main.pdf" class="card" target="_blank" id=".hidden">
+            <img src="./miniaturas/algebra_II.png" alt="algebra_II">
+            <div class="card-text">
+                <p>Álgebra II</p>
+            </div>
+        </a>
+
+        <a href="./documents/Tercero/Segundo Cuatrimestre/FIS/main.pdf" class="card" target="_blank" id=".hidden">
+            <img src="./miniaturas/fis.png" alt="fis">
+            <div class="card-text">
+                <p>FIS</p>
+            </div>
+        </a>
+
+        <a href="./documents/Tercero/Segundo Cuatrimestre/IA/main.pdf" class="card" target="_blank" id=".hidden">
+            <img src="./miniaturas/ia.png" alt="ia">
+            <div class="card-text">
+                <p>IA</p>
+            </div>
+        </a>
+
+        <a href="./documents/Tercero/Segundo Cuatrimestre/ISE/main.pdf" class="card" target="_blank" id=".hidden">
+            <img src="./miniaturas/ise.png" alt="ise">
+            <div class="card-text">
+                <p>ISE</p>
+            </div>
+        </a>
+
+        <a href="./documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/main.pdf" class="card" target="_blank" id=".hidden">
+            <img src="./miniaturas/mn_II.png" alt="mnII">
+            <div class="card-text">
+                <p>Métodos Numéricos II</p>
+            </div>
+        </a>
+
+        <a href="./documents/Tercero/Segundo Cuatrimestre/Variable_Compleja_I/main.pdf" class="card" target="_blank" id=".hidden">
+            <img src="./miniaturas/var_c_I.png" alt="var_c_I">
+            <div class="card-text">
+                <p>Variable Compleja I</p>
+            </div>
+        </a>
 
     </div>
 </body>
