--- a/buscador/buscador_UGR.html
+++ b/buscador/buscador_UGR.html
@@ -171,7 +171,7 @@
 						LosDelDGIIM
 					</div>
 				</a>
-				<a class="icon" href="https://docs.google.com/spreadsheets/d/1eOhnSMfKHdAzlzxaywsdX-ebu_PB8TLO_rpgW3Ty8ao/edit?gid=0#gid=0">
+				<a class="icon" href="https://docs.google.com/spreadsheets/d/1HQbGjAPY5SFftvBi0U_gdnN3Whoeq0drF_opOoi79_Y/edit?gid=198534784#gid=198534784">
 					<div class="img_frame">
 						<img src="icons/google_sheets_icon.svg" alt="google classroom">
 					</div>
