--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </a>
 
-        <a href="./documents/Tercero/Segundo Cuatrimestre/Variable_Compleja_I/main.pdf" class="card" target="_blank" id=".hidden">
+        <a href="./documents/Tercero/Segundo Cuatrimestre/Variable_Compleja_I/main.pdf" class="card" target="_blank" id="hidden">
             <img src="./miniaturas/var_c_I.png" alt="var_c_I">
             <div class="card-text">
                 <p>Variable Compleja I</p>
