--- a/buscador/buscador_UGR.html
+++ b/buscador/buscador_UGR.html
@@ -247,7 +247,7 @@
 					</div>
 				</a>
 
-				<a class="icon" href="https://webmailest.ugr.es/?_task=mail&_mbox=INBOX">
+				<a class="icon" href="https://gmail.google.com">
 					<div class="img_frame">
 						<img src="icons/gmail_icon.svg" alt="oficinavirtual">
 					</div>
