--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
         </a>
 
-        <a href="./documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/main.pdf" class="card" target="_blank" id=".hidden">
+        <a href="./documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/main.pdf" class="card" target="_blank" id="hidden">
             <img src="./miniaturas/mn_II.png" alt="mnII">
             <div class="card-text">
                 <p>Métodos Numéricos II</p>
