--- a/buscador/buscador_UGR.html
+++ b/buscador/buscador_UGR.html
@@ -91,7 +91,7 @@
 									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=2926">Variable Compleja I</a></li>
 									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=6204">Álgebra II</a></li>
 									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=331">FIS</a></li>
-									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=">IA</a></li>
+									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=3630">IA</a></li>
 									<li><a href="https://pradogrado2425.ugr.es/course/view.php?id=3580">ISE</a></li>
 								</ul>
 							</li>
