--- a/buscador/buscador_UGR.html
+++ b/buscador/buscador_UGR.html
@@ -126,14 +126,18 @@
 					<li><a href="https://detexify.kirelabs.org/classify.html">Handwriten recognition</a></li>
 				</ul>
 
-				<div class="icon" href="https://classroom.google.com">
+				<ul class="icon" href="">
 					<div class="img_frame">
-						<img src="icons/classroom_icon.svg" alt="google classroom">
+						<img src="icons/folder_icon.svg" alt="folder">
 					</div>
 					<div class="icon_text">
-						Enlace 1
+						IAs
 					</div>
-				</div>
+					
+					<li><a href="https://chatgpt.com/" image="icons/chatgpt_icon.svg">ChatGPT</a></li>
+					<li><a href="https://gemini.google.com/app" image="icons/gemini_icon.svg">Gemini</a></li>
+					<li><a href="https://chat.deepseek.com/" image="icons/deepseek_icon.svg">DeepSeek</a></li>
+				</ul>
 
 				<div class="icon" href="https://classroom.google.com">
 					<div class="img_frame">
