--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
             </div>
         </a-->
 
-        <a href="./documents/Tercero/Segundo Cuatrimestre/Álgebra_II/main.pdf" class="card" target="_blank" id=".hidden">
+        <a href="./documents/Tercero/Segundo Cuatrimestre/Álgebra_II/main.pdf" class="card" target="_blank" id="hidden">
             <img src="./miniaturas/algebra_II.png" alt="algebra_II">
             <div class="card-text">
                 <p>Álgebra II</p>
             </div>
         </a>
 
-        <a href="./documents/Tercero/Segundo Cuatrimestre/FIS/main.pdf" class="card" target="_blank" id=".hidden">
+        <a href="./documents/Tercero/Segundo Cuatrimestre/FIS/main.pdf" class="card" target="_blank" id="hidden">
             <img src="./miniaturas/fis.png" alt="fis">
             <div class="card-text">
                 <p>FIS</p>
             </div>
         </a>
 
-        <a href="./documents/Tercero/Segundo Cuatrimestre/IA/main.pdf" class="card" target="_blank" id=".hidden">
+        <a href="./documents/Tercero/Segundo Cuatrimestre/IA/main.pdf" class="card" target="_blank" id="hidden">
             <img src="./miniaturas/ia.png" alt="ia">
             <div class="card-text">
                 <p>IA</p>
             </div>
         </a>
 
-        <a href="./documents/Tercero/Segundo Cuatrimestre/ISE/main.pdf" class="card" target="_blank" id=".hidden">
+        <a href="./documents/Tercero/Segundo Cuatrimestre/ISE/main.pdf" class="card" target="_blank" id="hidden">
             <img src="./miniaturas/ise.png" alt="ise">
             <div class="card-text">
                 <p>ISE</p>
