--- a/buscador/buscador_UGR.html
+++ b/buscador/buscador_UGR.html
@@ -103,20 +103,20 @@
 								<ul>
 									<li><a href="https://pradogrado2526.ugr.es/course/view.php?id=707">DDSI</a></li>
 									<li><a href="https://pradogrado2526.ugr.es/course/view.php?id=2207">IG</a></li>
-									<li><a href="">Enlace 3</a></li>
-									<li><a href="">Enlace 4</a></li>
-									<li><a href="">Enlace 5</a></li>
-									<li><a href="">Enlace 6</a></li>
+									<li><a href="#">Inferencia Estadística</a></li>
+									<li><a href="#">Análisis Funcional</a></li>
+									<li><a href="#">Álgebra III</a></li>
+									<li><a href="#">Topología II</a></li>
 								</ul>
 							</li>
 							<li><a href="">Segundo Cuatrimestre</a>
 								<ul>
-									<li><a href="">Enlace 1</a></li>
-									<li><a href="">Enlace 2</a></li>
-									<li><a href="">Enlace 3</a></li>
-									<li><a href="">Enlace 4</a></li>
-									<li><a href="">Enlace 5</a></li>
-									<li><a href="">Enlace 6</a></li>
+									<li><a href="#">Enlace 1</a></li>
+									<li><a href="#">Enlace 2</a></li>
+									<li><a href="#">Enlace 3</a></li>
+									<li><a href="#">Enlace 4</a></li>
+									<li><a href="#">Enlace 5</a></li>
+									<li><a href="#">Enlace 6</a></li>
 								</ul>
 							</li>
 						</ul>
