--- a/buscador/buscador_UGR.html
+++ b/buscador/buscador_UGR.html
@@ -103,7 +103,7 @@
 								<ul>
 									<li><a href="https://pradogrado2526.ugr.es/course/view.php?id=707">DDSI</a></li>
 									<li><a href="https://pradogrado2526.ugr.es/course/view.php?id=2207">IG</a></li>
-									<li><a href="#">Inferencia Estadística</a></li>
+									<li><a href="https://pradogrado2526.ugr.es/course/view.php?id=2191">Inferencia Estadística</a></li>
 									<li><a href="#">Análisis Funcional</a></li>
 									<li><a href="#">Álgebra III</a></li>
 									<li><a href="#">Topología II</a></li>
