--- a/buscador/buscador_UGR.html
+++ b/buscador/buscador_UGR.html
@@ -105,7 +105,7 @@
 									<li><a href="https://pradogrado2526.ugr.es/course/view.php?id=2207">IG</a></li>
 									<li><a href="https://pradogrado2526.ugr.es/course/view.php?id=2191">Inferencia Estadística</a></li>
 									<li><a href="#">Análisis Funcional</a></li>
-									<li><a href="#">Álgebra III</a></li>
+									<li><a href="https://pradogrado2526.ugr.es/course/view.php?id=6370">Álgebra III</a></li>
 									<li><a href="#">Topología II</a></li>
 								</ul>
 							</li>
