--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Archivos</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <h1>Archivos</h1>
 
@@ -22,8 +24,8 @@
 
     <!-- <h2>Tercero</h2> -->
 
-    <div class="container">      
-        
+    <div class="container">
+
         <!--a href="./documents/Ecuaciones_Diferenciales_I/main.pdf" class="card" target="blank">
             <img src="./miniaturas/ec_dif.png" alt="Imagen 2">
             <div class="card-text">
@@ -59,20 +61,48 @@
             </div>
         </a>
 
-        <a href="./documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/main.pdf" class="card" target="_blank" id="hidden">
+        <a href="./documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/main.pdf" class="card" target="_blank"
+            id="hidden">
             <img src="./miniaturas/mn_II.png" alt="mnII">
             <div class="card-text">
                 <p>Métodos Numéricos II</p>
             </div>
         </a>
 
-        <a href="./documents/Tercero/Segundo Cuatrimestre/Variable_Compleja_I/main.pdf" class="card" target="_blank" id="hidden">
+        <a href="./documents/Tercero/Segundo Cuatrimestre/Variable_Compleja_I/main.pdf" class="card" target="_blank"
+            id="hidden">
             <img src="./miniaturas/var_c_I.png" alt="var_c_I">
             <div class="card-text">
                 <p>Variable Compleja I</p>
             </div>
         </a>
-
     </div>
+
+    <h2>Cuarto</h2>
+
+    <div class="container">
+        <a href="./documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/main.pdf" class="card" target="_blank">
+            <img src="./miniaturas/analisis_funcional.png" alt="analisis_funcional">
+            <div class="card-text">
+                <p>Análisis Funcional</p>
+            </div>
+        </a>
+        <a href="./documents/Cuarto/Primer Cuatrimestre/Álgebra III/main.pdf" class="card" target="_blank">
+            <img src="./miniaturas/algebra_III.png" alt="algebra_III">
+            <div class="card-text">
+                <p>Álgebra III</p>
+            </div>
+
+        </a>
+
+        <a href="./documents/Cuarto/Primer Cuatrimestre/Topología II/main.pdf" class="card" target="_blank">
+            <img src="./miniaturas/topo_II.png" alt="topo_II">
+            <div class="card-text">
+                <p>Topología II</p>
+            </div>
+        </a>
+    </div>
+
 </body>
+
 </html>
