--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
                 <p>Análisis Funcional</p>
             </div>
         </a>
-        <a href="./documents/Cuarto/Primer Cuatrimestre/Álgebra III/main.pdf" class="card" target="_blank">
+        <!-- <a href="./documents/Cuarto/Primer Cuatrimestre/Álgebra III/main.pdf" class="card" target="_blank">
             <img src="./miniaturas/algebra_III.png" alt="algebra_III">
             <div class="card-text">
                 <p>Álgebra III</p>
             </div>
 
-        </a>
+        </a> -->
 
         <a href="./documents/Cuarto/Primer Cuatrimestre/Topología II/main.pdf" class="card" target="_blank">
             <img src="./miniaturas/topo_II.png" alt="topo_II">
