--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
     <h2>Cuarto</h2>
 
     <div class="container">
-        <a href="./documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/main.pdf" class="card" target="_blank">
+        <!-- <a href="./documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/main.pdf" class="card" target="_blank">
             <img src="./miniaturas/analisis_funcional.png" alt="analisis_funcional">
             <div class="card-text">
                 <p>Análisis Funcional</p>
             </div>
-        </a>
+        </a> -->
         <!-- <a href="./documents/Cuarto/Primer Cuatrimestre/Álgebra III/main.pdf" class="card" target="_blank">
             <img src="./miniaturas/algebra_III.png" alt="algebra_III">
             <div class="card-text">
